--- a/app/src/main/res/layout/item_clean_trash_child_child.xml
+++ b/app/src/main/res/layout/item_clean_trash_child_child.xml
@@ -26,7 +26,7 @@
         android:singleLine="true"
         android:textSize="16dp"/>
 
-    <com.swift.boost.function.trash.adapter.ItemCheckBox
+    <com.jb.filemanager.function.trash.adapter.ItemCheckBox
         android:id="@+id/item_child_child_select_button"
         android:layout_width="60dp"
         android:layout_height="60dp"
