--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,14 @@
     <dimen name="drawer_item_height_70dp">70dp</dimen>
     <dimen name="drawer_sv_margin_top_42dp">42dp</dimen>
 
-
+    <!-- Dialog 通用尺寸 -->
+    <dimen name="dialog_common_title_size">20sp</dimen>
+    <dimen name="dialog_common_detail_size">16sp</dimen>
+    <dimen name="dialog_common_button_text_size">18sp</dimen>
+    <dimen name="dialog_common_height">180dp</dimen>
+    <dimen name="dialog_common_padding_top">16dp</dimen>
+    <dimen name="dialog_common_padding_left">20dp</dimen>
+    <dimen name="dialog_common_padding_text2">12dp</dimen>
+    <dimen name="dialog_common_margin">16dp</dimen>
+    <dimen name="dialog_common_padding_text1">18dp</dimen>
 </resources>
