--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,4 +74,67 @@
         <item name="android:windowEnterAnimation">@anim/base_dialog_enter_no_interpolator</item>
     </style>
 
+
+    <!-- Dialog通用 -->
+
+    <style name="dialog_common_title">
+        <item name="android:textSize">@dimen/dialog_common_title_size</item>
+        <item name="android:textColor">@color/power_saving_dialog_title</item>
+    </style>
+
+    <style name="dialog_common_detail">
+        <item name="android:textSize">@dimen/dialog_common_detail_size</item>
+        <item name="android:textColor">@color/power_saving_dialog_detail</item>
+    </style>
+
+    <style name="dialog_common_button_cancel">
+        <item name="android:textSize">@dimen/dialog_common_button_text_size</item>
+        <item name="android:textColor">@color/power_saving_dialog_btn_cancel</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="dialog_common_button_ok">
+        <item name="android:textSize">@dimen/dialog_common_button_text_size</item>
+        <item name="android:textColor">@color/power_saving_dialog_btn_ok</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- 标题的字体风格 -->
+    <style name="common_title_main_text">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+    <!-- 通用 Item 文件大小 单位 样式 -->
+    <style name="common_file_unit">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#bcbcbc</item>
+    </style>
+    <!-- 通用 Item 文件大小 数字 样式 -->
+    <style name="common_file_size">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#787878</item>
+    </style>
+    <!-- 通用 Item一级名称 的样式 -->
+    <style name="common_item_name">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#787878</item>
+    </style>
+    <!-- 通用 Item二级名称 灰色 的样式 -->
+    <style name="common_item_info_gray">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#bebebe</item>
+    </style>
+    <!-- 通用 Item二级名称 绿色 的样式 -->
+    <style name="common_item_info_green">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#85c443</item>
+    </style>
+    <!-- 通用左右滑动checkbox -->
+    <style name="common_horizontal_checkbox" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/common_horizontal_checkbox_selector</item>
+    </style>
+    <!-- 列表的通用的二级分隔线样式 -->
+    <style name="common_listview_divider_level1">
+        <item name="android:background">#dddddd</item>
+    </style>
 </resources>
