布局抽出底部菜单栏

--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
     tools:ignore="SpUsage,ContentDescription"
     android:fitsSystemWindows="true"
     android:id="@+id/rl_home_root"
@@ -88,65 +87,7 @@
 
         </android.support.v4.view.ViewPager>
 
-        <LinearLayout
-            android:id="@+id/ll_main_bottom_operate_first_container"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="bottom"
-            android:background="#77000000"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/tv_main_bottom_operate_first_container_cut"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawableTop="@drawable/ic_drawer_about"
-                android:drawablePadding="3dp"
-                android:text="Cut"
-                android:textColor="#FFFFFF"
-                android:textSize="16dp"/>
-
-            <TextView
-                android:id="@+id/tv_main_bottom_operate_first_container_copy"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawableTop="@drawable/ic_drawer_setting"
-                android:drawablePadding="3dp"
-                android:text="Copy"
-                android:textColor="#FFFFFF"
-                android:textSize="16dp"/>
-
-            <TextView
-                android:id="@+id/tv_main_bottom_operate_first_container_delete"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawableTop="@drawable/ic_drawer_feedback"
-                android:drawablePadding="3dp"
-                android:text="Delete"
-                android:textColor="#FFFFFF"
-                android:textSize="16dp"/>
-
-            <ImageView
-                android:id="@+id/iv_main_bottom_operate_first_container_more"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_operate_bar_more"/>
-
-        </LinearLayout>
+        <include layout="@layout/common_operate_bar"/>
 
         <LinearLayout
             android:id="@+id/ll_main_bottom_operate_second_container"
