添加白名单页面

--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -5,10 +5,17 @@
                 android:background="@color/white"
                 android:orientation="vertical">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_ignore"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="跳转白名单"/>
 
         <TextView
             android:id="@+id/tv_chosen_size"
