--- a/app/src/main/res/layout/item_applock_group.xml
+++ b/app/src/main/res/layout/item_applock_group.xml
@@ -13,7 +13,7 @@
             android:textColor="#333333"
             android:textSize="16dp" />
 
-        <com.swift.boost.view.GroupSelectBox
+        <com.jb.filemanager.commomview.GroupSelectBox
             android:id="@+id/activity_applock_group_selectbox"
             android:layout_width="40dp"
             android:layout_height="40dp"
