--- a/app/src/main/res/layout/layout_num_lock.xml
+++ b/app/src/main/res/layout/layout_num_lock.xml
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_1"
                 style="@style/lock_num_style"
                 ripple:alphaFactor = "0.7"
@@ -76,7 +76,7 @@
                 ripple:hover="true"
                 android:text="1" />
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_4"
                 ripple:alphaFactor = "0.7"
                 ripple:rippleColor="#7FCCCCCC"
@@ -84,7 +84,7 @@
                 style="@style/lock_num_style"
                 android:text="4" />
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_7"
                 ripple:alphaFactor = "0.7"
                 ripple:rippleColor="#7FCCCCCC"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_2"
                 style="@style/lock_num_style"
                 ripple:alphaFactor = "0.7"
@@ -107,7 +107,7 @@
                 ripple:hover="true"
                 android:text="2" />
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_5"
                 ripple:alphaFactor = "0.7"
                 ripple:rippleColor="#7FCCCCCC"
@@ -116,7 +116,7 @@
                 android:text="5" />
 
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_8"
                 ripple:alphaFactor = "0.7"
                 ripple:rippleColor="#7FCCCCCC"
@@ -124,7 +124,7 @@
                 style="@style/lock_num_style"
                 android:text="8" />
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_0"
                 ripple:alphaFactor = "0.7"
                 ripple:rippleColor="#7FCCCCCC"
@@ -139,7 +139,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_3"
                 style="@style/lock_num_style"
                 ripple:alphaFactor = "0.7"
@@ -148,7 +148,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="3" />
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_6"
                 style="@style/lock_num_style"
                 ripple:alphaFactor = "0.7"
@@ -157,7 +157,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="6" />
 
-            <com.swift.boost.function.applock.view.RippleView
+            <com.jb.filemanager.function.applock.view.RippleView
                 android:id="@+id/number_9"
                 style="@style/lock_num_style"
                 ripple:alphaFactor = "0.7"
