--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,7 +74,6 @@
         <item name="android:windowEnterAnimation">@anim/base_dialog_enter_no_interpolator</item>
     </style>
 
-
     <!-- Dialog通用 -->
 
     <style name="dialog_common_title">
@@ -136,5 +135,33 @@
     <!-- 列表的通用的二级分隔线样式 -->
     <style name="common_listview_divider_level1">
         <item name="android:background">#dddddd</item>
+    </style>
+    <!-- 以类似Dialog样式弹出的Activity的主题, 一般这类Activity是在程序之外仿弹窗使用 -->
+    <!--由于本应用使用的是AppCompat包 所以需要使用AppCompat重写属性 来达到类似效果-->
+    <style name="Pop.Activity.Theme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowAnimationStyle">@style/WindowAnimation_NoAnimation</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <!-- 无动画窗口样式 -->
+    <style name="WindowAnimation_NoAnimation">
+        <item name="android:activityOpenEnterAnimation">@null</item>
+        <item name="android:activityOpenExitAnimation">@null</item>
+        <item name="android:activityCloseEnterAnimation">@null</item>
+        <item name="android:activityCloseExitAnimation">@null</item>
+        <item name="android:taskOpenEnterAnimation">@null</item>
+        <item name="android:taskOpenExitAnimation">@null</item>
+        <item name="android:taskCloseEnterAnimation">@null</item>
+        <item name="android:taskCloseExitAnimation">@null</item>
+        <item name="android:taskToFrontEnterAnimation">@null</item>
+        <item name="android:taskToFrontExitAnimation">@null</item>
+        <item name="android:taskToBackEnterAnimation">@null</item>
+        <item name="android:taskToBackExitAnimation">@null</item>
+        <item name="android:windowEnterAnimation">@null</item>
+        <item name="android:windowExitAnimation">@null</item>
     </style>
 </resources>
