--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -6,7 +6,7 @@
     android:id="@+id/rl_home_root"
     android:clipToPadding="false"
     android:clipChildren="false"
-    android:background="#FF0000"
+    android:background="#eeeeee"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
