--- a/app/src/main/res/layout/activity_apk_manager.xml
+++ b/app/src/main/res/layout/activity_apk_manager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,17 +9,36 @@
     android:orientation="vertical"
     tools:context="com.jb.filemanager.function.apkmanager.AppManagerActivity">
 
-    <include layout="@layout/common_action_bar_with_search" />
-
-    <ExpandableListView
-        android:id="@+id/elv_apk"
-        android:background="@color/white"
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:groupIndicator="@null"
-        android:listSelector="@android:color/transparent"
-        android:scrollbars="none">
+        android:layout_width="match_parent"
+        android:orientation="vertical">
 
-    </ExpandableListView>
-</LinearLayout>
+        <include layout="@layout/common_action_bar_with_search"/>
+
+        <ExpandableListView
+            android:id="@+id/elv_apk"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:divider="@null"
+            android:groupIndicator="@null"
+            android:listSelector="@android:color/transparent"
+            android:scrollbars="none">
+
+        </ExpandableListView>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_bottom_delete"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorAccent"
+        android:gravity="center"
+        android:text="Delete"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:visibility="gone"/>
+</RelativeLayout>
