--- a/app/src/main/res/drawable/breadcrumb_item_selector.xml
+++ b/app/src/main/res/drawable/breadcrumb_item_selector.xml
@@ -2,6 +2,22 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@android:color/transparent" android:state_selected="false"/>
-    <item android:drawable="@drawable/breadcrumb_item_bg" android:state_selected="true"/>
+    <item android:state_selected="true">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+            <solid android:color="#1a000000"/>
+
+            <corners
+                android:bottomLeftRadius="3dp"
+                android:bottomRightRadius="3dp"
+                android:topLeftRadius="3dp"
+                android:topRightRadius="3dp"/>
+
+            <padding
+                android:left="5dp"
+                android:right="5dp"/>
+
+        </shape>
+    </item>
 
 </selector>
