--- a/app/src/main/res/layout/item_music_child.xml
+++ b/app/src/main/res/layout/item_music_child.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:lines="1"
+            android:ellipsize="marquee"
             android:textColor="#000000"
             android:textSize="16dp" />
 
