--- a/app/src/main/res/layout/item_music_group.xml
+++ b/app/src/main/res/layout/item_music_group.xml
@@ -14,6 +14,7 @@
         android:layout_weight="1"
         android:drawablePadding="6dp"
         android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
         android:lines="1"
         android:textColor="#000000"
         android:textSize="16dp" />
@@ -22,10 +23,8 @@
         android:id="@+id/iv_music_group_item_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:gravity="center_vertical"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
         android:src="@drawable/ic_drawer_feedback" />
 
 
