处理数据的获取和显示

--- a/app/src/main/res/layout/item_app_child.xml
+++ b/app/src/main/res/layout/item_app_child.xml
@@ -12,16 +12,18 @@
         android:src="@mipmap/ic_launcher"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_app_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16dp"
             android:textStyle="bold"
+            android:singleLine="true"
             tools:text="app name"/>
 
         <Space
@@ -36,11 +38,6 @@
             android:textSize="14dp"
             tools:text="app size"/>
     </LinearLayout>
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
 
     <com.jb.filemanager.function.trash.adapter.ItemCheckBox
         android:id="@+id/icb_child_check"
