--- a/app/src/main/res/layout/activity_zip_file_preview.xml
+++ b/app/src/main/res/layout/activity_zip_file_preview.xml
@@ -6,11 +6,13 @@
               android:orientation="vertical">
 
     <TextView
+        android:id="@+id/zip_pre_btn_extract"
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hahahahah"
+        android:text="Extract Selected File(s)"
         android:textColor="@android:color/holo_blue_light"
-        android:textSize="40dp"/>
+        android:textSize="30dp"/>
 
     <com.jb.filemanager.function.zipfile.view.BreadcrumbNavigation
         android:id="@+id/navigation"
