--- a/app/src/main/res/layout/activity_apk_manager.xml
+++ b/app/src/main/res/layout/activity_apk_manager.xml
@@ -16,7 +16,7 @@
 
         <include layout="@layout/app_manager_title_with_search"/>
 
-        <ExpandableListView
+        <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
             android:id="@+id/elv_apk"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,7 +26,7 @@
             android:listSelector="@android:color/transparent"
             android:scrollbars="none">
 
-        </ExpandableListView>
+        </com.jb.filemanager.ui.widget.FloatingGroupExpandableListView>
     </LinearLayout>
 
     <TextView
