--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -18,7 +18,14 @@
 
         </android.support.v7.widget.RecyclerView>
 
-        <include layout="@layout/common_operate_bar"/>
+        <com.jb.filemanager.ui.widget.BottomOperateBar
+            android:id="@+id/bottom_operate_bar_container"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:background="#77000000"
+            android:orientation="horizontal"
+            android:visibility="gone"/>
 
     </FrameLayout>
 
