--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -87,7 +87,14 @@
 
         </android.support.v4.view.ViewPager>
 
-        <include layout="@layout/common_operate_bar"/>
+        <com.jb.filemanager.ui.widget.BottomOperateBar
+            android:id="@+id/bottom_operate_bar_container"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:background="#77000000"
+            android:orientation="horizontal"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/ll_main_bottom_operate_second_container"
