--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,11 @@
         <item name="android:windowIsTranslucent">false</item>
     </style>
 
+    <!--带有window背景的主题 透明背景-->
+    <style name="AppTheme.NoActionBar_TranslucentBar_with_transparent_bg" parent="Pop.Activity.Theme">
+
+    </style>
+
     <!-- 自定义弹出框基础样式， 自定义样式的Dialog如需定义theme, 请继承此theme -->
     <style name="base_dialog_theme" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
