--- a/app/src/main/res/layout/item_image_result.xml
+++ b/app/src/main/res/layout/item_image_result.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:orientation="vertical"
-             android:layout_width="100dp"
-             android:layout_height="100dp"
-             tools:background="@color/ad_color_8acb29">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="100dp">
 
-    <ImageView
-        android:id="@+id/item_image_result_photo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_about_logo"/>
+    <include
+        android:id="@+id/item_image_result_1"
+        layout="@layout/item_sub_image"/>
 
-    <com.jb.filemanager.commomview.GroupSelectBox
-        android:id="@+id/item_image_result_gsb"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/ic_about_logo"
-        android:layout_gravity="right|bottom"/>
+    <include
+        android:id="@+id/item_image_result_2"
+        layout="@layout/item_sub_image"/>
 
-</FrameLayout>
+    <include
+        android:id="@+id/item_image_result_3"
+        layout="@layout/item_sub_image"/>
+
+</LinearLayout>
