--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -9,6 +9,7 @@
         <item name="windowActionBar">false</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimation_NoAnimation</item>
     </style>
 
     <!--带有window背景的主题 透明背景-->
