--- a/app/src/main/res/layout/activity_zip_file.xml
+++ b/app/src/main/res/layout/activity_zip_file.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@android:color/white"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:orientation="vertical">
 
     <com.jb.filemanager.commomview.ProgressWheel
         android:id="@+id/zip_progress"
@@ -14,8 +14,11 @@
         app:matProg_barWidth="4dp"
         app:matProg_progressIndeterminate="true"/>
 
+    <include layout="@layout/common_operate_bar_modify"/>
+
     <ExpandableListView
         android:id="@+id/zip_expand_lv"
         android:layout_width="match_parent"
+        android:layout_marginTop="25dp"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+</RelativeLayout>
