--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="SpUsage,ContentDescription"
     android:fitsSystemWindows="true"
     android:id="@+id/rl_home_root"
     android:clipToPadding="false"
     android:clipChildren="false"
-    android:background="#eeeeee"
+    android:background="#f5f6ff"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
-        android:background="#0000FF">
+        android:background="#FFFFFF">
 
         <ImageView
             android:id="@+id/iv_main_action_bar_menu"
+            android:layout_width="52dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_width="44dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginEnd="4dp"
             android:background="@android:color/transparent"
             android:contentDescription="@null"
-            android:src="@drawable/ic_home_menu"  />
+            android:src="@drawable/ic_home_menu"
+            android:scaleType="center"/>
 
         <TextView
             android:id="@+id/tv_main_action_bar_title"
@@ -37,8 +35,8 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/app_name"
-            android:textColor="#000000"
-            android:textSize="18dp" />
+            android:textColor="#B2000000"
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/et_main_action_bar_search"
@@ -82,8 +80,14 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/tl_main_view_pager_tab"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top" />
+                android:layout_height="50dp"
+                android:layout_gravity="top"
+                app:tabTextAppearance="@style/TabLayoutTextAppearance"
+                app:tabSelectedTextColor="@color/home_tab_text_color_select"
+                app:tabTextColor="@color/home_tab_text_color_normal"
+                app:tabIndicatorHeight="2dp"
+                app:tabIndicatorColor="@color/home_tab_indicator"
+                app:tabBackground="@color/white" />
 
         </android.support.v4.view.ViewPager>
 
