--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,10 @@
     <color name="white_5">#0Cffffff</color>
     <color name="black_40">#66000000</color>
 
+    <!-- home -->
+    <color name="home_tab_text_color_select">#B2000000</color>
+    <color name="home_tab_text_color_normal">#66000000</color>
+    <color name="home_tab_indicator">#42C0AE</color>
 
     <!-- about -->
     <color name="about_item_pressed">#EEEEEE</color>
