--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -91,6 +91,12 @@
 
         </android.support.v4.view.ViewPager>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/main_shadow"/>
+
         <com.jb.filemanager.ui.widget.BottomOperateBar
             android:id="@+id/bottom_operate_bar_container"
             android:layout_width="match_parent"
